# accelerate

./: .env.testnet  App.tsx  BULK_MEMORY_SOLUTION.md  DEPLOYMENT_ATTEMPTS_NOV24.md  Dockerfile  README.md  debug_report.md  description.md  index.css  index.html  metadata.json  next.config.mjs  package-lock.json  package.json  plan.md  tailwind.config.ts  testnetmigrationplan.md  tsconfig.json  tsconfig.tsbuildinfo  types.ts
.next/: react-loadable-manifest.json  trace
.next/cache/: .tsbuildinfo
.next/server/: middleware-react-loadable-manifest.js  (+2 more)
app/: globals.css  layout.tsx  page.tsx
circuits/: pot12_0001.ptau  pot12_beacon.ptau  proof.json  public.json  rollup.circom  root.circom  root.r1cs  root.sym  root_0000.zkey  root_0001.zkey  root_final.zkey  test_input.json  verification_key.json  witness.wtns
components/: ConnectWalletModal.tsx  Feed.tsx  Header.tsx  Icons.tsx  StatsPanel.tsx  TransactionForm.tsx
contracts/: Cargo.toml  addresses.testnet.json  build_and_polyfill.sh  build_clean.sh  cleanup_wasm.sh  cleanup_wasm_debug.sh  client.rs  deploy.sh  get_account_hash.py  lib.rs  lib_full.rs.backup  lib_full_v6.rs  lib_minimal.rs  lib_simple2.rs  lib_stub_attempt.rs.backup  lib_v2.rs  polyfill_wat.py
contracts/.cargo/: config.toml
contracts/keys/: public_key.pem  public_key_hex  secret_key.pem
contracts/keys/new_account/: public_key.pem  public_key_hex  secret_key.pem
scripts/: compile.sh  e2e-test.ts
services/: casperService.ts  merkleTree.ts  mockChain.ts  observability.ts  proverService.ts
views/: Architecture.tsx  Dashboard.tsx  Home.tsx
(+58 files in other folders)
