[package]
name = "casper-accelerate-contract"
version = "0.1.0"
edition = "2021"

[dependencies]
casper-contract = { version = "3.0.0", default-features = false, features = ["contract"] }
casper-types = { version = "3.0.0", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "casper-accelerate-client"
path = "client.rs"
