[package]
name = "casper_accelerate_contract"
version = "0.1.0"
edition = "2021"

[dependencies]
casper-contract = { version = "5", default-features = false }
casper-types = { version = "6", default-features = false }
wee_alloc = "0.4.5"

[lib]
crate-type = ["cdylib"]
path = "lib_full_v6.rs"

[[bin]]
name = "client_deposit"
path = "client_deposit.rs"
test = false
doc = false

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true

# Removed vendored patches to test if they're causing the deserialization issue
# [patch.crates-io]
# casper-contract = { path = "vendor/casper-contract-1.4.4" }
# casper-types = { path = "vendor/casper-types-1.5.0" }
# serde = { path = "vendor/serde-1.0.228" }
# serde_core = { path = "vendor/serde_core-1.0.228" }